--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@ yarn-error.log*
 src/components/**/*.js
 src/components/**/*.map
 src/components/**/*.jsx
-
+!src/components/ReactImageViewer
 src/pages/**/*.js
 src/pages/**/*.map
 src/pages/**/*.jsx
+
