--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,6 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts",
-    "src/components/ReactImageViewer/components/tween.js"
+    "src/setupTests.ts"
   ]
 }
